# Leaf_burn

./: .gitignore  README.md  pyproject.toml
sims/: config.py  main_analysis.py  main_mockups.py  main_preprocess.py  main_process.py  params.json  recap.pptx
sims/output/: tleaf_at_15h.csv  tleaf_at_16h.csv
sims/output/exposed_north_east/biochemical_dominant/tcst_ucst/belledenise/: mtg20190628000000.pckl  mtg20190628010000.pckl  mtg20190628030000.pckl  mtg20190628050000.pckl  mtg20190628060000.pckl  mtg20190628070000.pckl  mtg20190628080000.pckl  mtg20190628090000.pckl  mtg20190628100000.pckl  mtg20190628110000.pckl  mtg20190628120000.pckl  mtg20190628130000.pckl  mtg20190628140000.pckl  mtg20190628150000.pckl  mtg20190628160000.pckl  mtg20190628170000.pckl  mtg20190628180000.pckl  mtg20190628190000.pckl  mtg20190628200000.pckl  mtg20190628210000.pckl  mtg20190628220000.pckl  mtg20190628230000.pckl  time_series.csv
sims/output/exposed_north_east/biochemical_dominant/tcst_ucst/plantdec/: mtg20190628010000.pckl  mtg20190628030000.pckl  mtg20190628050000.pckl  mtg20190628090000.pckl  mtg20190628100000.pckl  mtg20190628110000.pckl  mtg20190628120000.pckl  mtg20190628130000.pckl  mtg20190628140000.pckl  mtg20190628150000.pckl  mtg20190628160000.pckl  mtg20190628170000.pckl  (+7 more)
sims/source/: temperature_profile.xlsx  weather.csv
sims/source/digit/: all_pots.csv  all_pots_demo.csv  digit_belledenise.csv  digit_plantdec.csv  digit_poulsard.csv  digit_raboso.csv  digit_salice.csv
src/leaf_burn/: funcs.py  hydroshoot_wrapper.py  initialisation_twins.py  utils.py
(+2752 files in other folders)
